[package]
name = "mhrl"
version = "0.1.0"
authors = ["jzhang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = { version = "0.17.0", features = ["specs-derive"] }
lazy_static = { version = "1.4.0" }
ezing = { version = "0.2.1" }
rand = { version = "0.8.0" }
getrandom = { version = "0.2", features = ["js"] }